welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:18: error: illegal start of simple expression
        for (i <- indiceGauche + 1 to() indiceGauche + aMettre + 1) )
                                                                    ^